--- a/basilisk/locales/en-US/chrome/browser/preferences/sync.dtd
+++ b/basilisk/locales/en-US/chrome/browser/preferences/sync.dtd
@@ -16,6 +16,7 @@
 <!-- Manage Account -->
 <!ENTITY manageAccount.label          "Manage Account">
 <!ENTITY manageAccount.accesskey      "n">
+<!ENTITY viewQuota.label              "View Quota">
 <!ENTITY changePassword2.label        "Change Password…">
 <!ENTITY myRecoveryKey.label          "My Recovery Key">
 <!ENTITY resetSync2.label             "Reset Sync…">
