[BASILISK] Port PM Sync Client - Part 5: Port the original sync toolbar button and create a synced tabs toolbar button

--- a/basilisk/locales/en-US/chrome/browser/browser.dtd
+++ b/basilisk/locales/en-US/chrome/browser/browser.dtd
@@ -734,6 +734,7 @@ you can use these alternative items. Otherwise, their values should be empty.  -
 <!ENTITY syncSyncNowItem.label        "Sync Now">
 <!ENTITY syncSyncNowItem.accesskey    "S">
 <!ENTITY syncToolbarButton.label      "Sync">
+<!ENTITY syncTabsToolbarButton.label  "Synced Tabs">
 #endif
 
 <!ENTITY customizeMode.menuAndToolbars.header2 "Additional Tools and Features">
