--- a/basilisk/locales/en-US/chrome/overrides/appstrings.properties
+++ b/basilisk/locales/en-US/chrome/overrides/appstrings.properties
@@ -3,25 +3,25 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 malformedURI=The URL is not valid and cannot be loaded.
-fileNotFound=Firefox can’t find the file at %S.
+fileNotFound=Basilisk can’t find the file at %S.
 fileAccessDenied=The file at %S is not readable.
-dnsNotFound=Firefox can’t find the server at %S.
-unknownProtocolFound=Firefox doesn’t know how to open this address, because one of the following protocols (%S) isn’t associated with any program or is not allowed in this context.
+dnsNotFound=Basilisk can’t find the server at %S.
+unknownProtocolFound=Basilisk doesn’t know how to open this address, because one of the following protocols (%S) isn’t associated with any program or is not allowed in this context.
 connectionFailure=Firefox can’t establish a connection to the server at %S.
 netInterrupt=The connection to %S was interrupted while the page was loading.
 netTimeout=The server at %S is taking too long to respond.
-redirectLoop=Firefox has detected that the server is redirecting the request for this address in a way that will never complete.
+redirectLoop=Basilisk has detected that the server is redirecting the request for this address in a way that will never complete.
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don’t translate "%S"
 confirmRepostPrompt=To display this page, %S must send information that will repeat any action (such as a search or order confirmation) that was performed earlier.
 resendButton.label=Resend
-unknownSocketType=Firefox doesn’t know how to communicate with the server.
+unknownSocketType=Basilisk doesn’t know how to communicate with the server.
 netReset=The connection to the server was reset while the page was loading.
 notCached=This document is no longer available.
-netOffline=Firefox is currently in offline mode and can’t browse the Web.
+netOffline=Basilisk is currently in offline mode and can’t browse the Web.
 isprinting=The document cannot change while Printing or in Print Preview.
-deniedPortAccess=This address uses a network port which is normally used for purposes other than Web browsing. Firefox has canceled the request for your protection.
-proxyResolveFailure=Firefox is configured to use a proxy server that can’t be found.
-proxyConnectFailure=Firefox is configured to use a proxy server that is refusing connections.
+deniedPortAccess=This address uses a network port which is normally used for purposes other than Web browsing. Basilisk has canceled the request for your protection.
+proxyResolveFailure=Basilisk is configured to use a proxy server that can’t be found.
+proxyConnectFailure=Basilisk is configured to use a proxy server that is refusing connections.
 contentEncodingError=The page you are trying to view cannot be shown because it uses an invalid or unsupported form of compression.
 unsafeContentType=The page you are trying to view cannot be shown because it is contained in a file type that may not be safe to open. Please contact the website owners to inform them of this problem.
 externalProtocolTitle=External Protocol Request
@@ -35,9 +35,9 @@ unwantedBlocked=The site at %S has been reported as serving unwanted software an
 deceptiveBlocked=This web page at %S has been reported as a deceptive site and has been blocked based on your security preferences.
 cspBlocked=This page has a content security policy that prevents it from being loaded in this way.
 corruptedContentErrorv2=The site at %S has experienced a network protocol violation that cannot be repaired.
-remoteXUL=This page uses an unsupported technology that is no longer available by default in Firefox.
+remoteXUL=This page uses an unsupported technology that is no longer available by default in Basilisk.
 ## LOCALIZATION NOTE (sslv3Used) - Do not translate "%S".
-sslv3Used=Firefox cannot guarantee the safety of your data on %S because it uses SSLv3, a broken security protocol.
+sslv3Used=Basilisk cannot guarantee the safety of your data on %S because it uses SSLv3, a broken security protocol.
 ## LOCALIZATION NOTE (weakCryptoUsed) - Do not translate "%S".
-weakCryptoUsed=The owner of %S has configured their website improperly. To protect your information from being stolen, Firefox has not connected to this website.
+weakCryptoUsed=The owner of %S has configured their website improperly. To protect your information from being stolen, Basilisk has not connected to this website.
 inadequateSecurityError=The website tried to negotiate an inadequate level of security.
