--- a/basilisk/branding/official/locales/en-US/brand.dtd
+++ b/basilisk/branding/official/locales/en-US/brand.dtd
@@ -7,4 +7,4 @@
 <!ENTITY  brandFullName         "Basilisk">
 <!ENTITY  vendorShortName       "Moonchild">
 <!ENTITY  vendorFullName        "Moonchild Productions">
-<!ENTITY  trademarkInfo.part1   "Basilisk, Basilisk Browser and the Basilisk logos are trademarks of Moonchild Productions.">
+<!ENTITY  trademarkInfo.part1   "Basilisk, Basilisk Browser and the Basilisk logos are trademarks of Basilisk-Dev.">
