Issue #7 and #8 - Update the rest of the Moonchild stuff to say either Basilisk-Dev or Basilisk Development Team

--- a/basilisk/branding/unofficial/locales/en-US/brand.dtd
+++ b/basilisk/branding/unofficial/locales/en-US/brand.dtd
@@ -5,6 +5,6 @@
 <!ENTITY  brandShorterName      "Serpent">
 <!ENTITY  brandShortName        "Serpent">
 <!ENTITY  brandFullName         "Serpent">
-<!ENTITY  vendorShortName       "Moonchild">
-<!ENTITY  vendorFullName        "Moonchild Productions">
+<!ENTITY  vendorShortName       "Basilisk-Dev">
+<!ENTITY  vendorFullName        "Basilisk-Dev">
 <!ENTITY  trademarkInfo.part1   " ">
