--- a/basilisk/branding/official/locales/en-US/brand.dtd
+++ b/basilisk/branding/official/locales/en-US/brand.dtd
@@ -5,6 +5,6 @@
 <!ENTITY  brandShorterName      "Basilisk">
 <!ENTITY  brandShortName        "Basilisk">
 <!ENTITY  brandFullName         "Basilisk">
-<!ENTITY  vendorShortName       "Moonchild">
-<!ENTITY  vendorFullName        "Moonchild Productions">
-<!ENTITY  trademarkInfo.part1   "Basilisk, Basilisk Browser and the Basilisk logos are trademarks of Basilisk-Dev.">
+<!ENTITY  vendorShortName       "Basilisk-Dev">
+<!ENTITY  vendorFullName        "Basilisk-Dev-Team">
+<!ENTITY  trademarkInfo.part1   "Basilisk, Basilisk Browser and the Basilisk logos are trademarks of the Basilisk Development Team.">
