--- a/basilisk/branding/official/locales/en-US/brand.dtd
+++ b/basilisk/branding/official/locales/en-US/brand.dtd
@@ -6,5 +6,5 @@
 <!ENTITY  brandShortName        "Basilisk">
 <!ENTITY  brandFullName         "Basilisk">
 <!ENTITY  vendorShortName       "Basilisk-Dev">
-<!ENTITY  vendorFullName        "Basilisk-Dev-Team">
+<!ENTITY  vendorFullName        "Basilisk-Dev">
 <!ENTITY  trademarkInfo.part1   "Basilisk, Basilisk Browser and the Basilisk logos are trademarks of the Basilisk Development Team.">
