Issue #21 - Rename "Web Developer" menu entries to "Developer Tools"

--- a/basilisk/locales/en-US/chrome/browser/browser.dtd
+++ b/basilisk/locales/en-US/chrome/browser/browser.dtd
@@ -243,8 +243,8 @@ These should match what Safari and other Apple applications use on OS X Lion. --
 <!ENTITY addons.accesskey             "A">
 <!ENTITY addons.commandkey            "A">
 
-<!ENTITY webDeveloperMenu.label       "Web Developer">
-<!ENTITY webDeveloperMenu.accesskey   "W">
+<!ENTITY webDeveloperMenu.label       "Developer Tools">
+<!ENTITY webDeveloperMenu.accesskey   "v">
 
 <!ENTITY inspectContextMenu.label     "Inspect Element">
 <!ENTITY inspectContextMenu.accesskey "Q">
