Issue #14 - Update search engines to match Pale Moon.
As part of this change we also removed search engine lists for locales
that we do not support, but we left the default fallback in place so
anyone using a langpack in the future will still have properly working
search engines.

--- a/basilisk/locales/en-US/chrome/browser-region/region.properties
+++ b/basilisk/locales/en-US/chrome/browser-region/region.properties
@@ -7,9 +7,13 @@ browser.search.defaultenginename=DuckDuckGo
 
 # Search engine order (order displayed in the search bar dropdown)s
 browser.search.order.1=DuckDuckGo
-browser.search.order.2=Yahoo
+browser.search.order.2=Mojeek
 browser.search.order.3=Bing
 browser.search.order.4=Ecosia
+browser.search.order.5=Ekoru
+browser.search.order.6=Twitter
+browser.search.order.7=Wikipedia
+browser.search.order.8=Yahoo
 
 # This is the default set of web based feed handlers shown in the reader
 # selection UI
