--- a/basilisk/branding/unofficial/locales/en-US/brand.dtd
+++ b/basilisk/branding/unofficial/locales/en-US/brand.dtd
@@ -2,9 +2,9 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<!ENTITY  brandShorterName      "Serpent">
-<!ENTITY  brandShortName        "Serpent">
-<!ENTITY  brandFullName         "Serpent">
+<!ENTITY  brandShorterName      "Snake">
+<!ENTITY  brandShortName        "Snake">
+<!ENTITY  brandFullName         "Snake">
 <!ENTITY  vendorShortName       "Basilisk-Dev">
 <!ENTITY  vendorFullName        "Basilisk-Dev">
 <!ENTITY  trademarkInfo.part1   " ">
