--- a/basilisk/branding/unofficial/locales/en-US/brand.properties
+++ b/basilisk/branding/unofficial/locales/en-US/brand.properties
@@ -2,9 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-brandShorterName=Serpent
-brandShortName=Serpent
-brandFullName=Serpent
+brandShorterName=Snake
+brandShortName=Snake
+brandFullName=Snake
 vendorShortName=Basilisk-Dev
 vendorFullName=Basilisk-Dev
 
