--- a/basilisk/locales/en-US/chrome/browser/tabbrowser.properties
+++ b/basilisk/locales/en-US/chrome/browser/tabbrowser.properties
@@ -19,6 +19,9 @@ tabs.downloading=Downloading…
 
 tabs.restoreLastTabs=Restore Tabs From Last Time
 tabs.emptyTabTitle=New Tab
+# LOCALIZATION NOTE (tabs.containerTitleFormat):
+# %1$S is the name of the container. %2$S is the tab title.
+tabs.containerTitleFormat=(%1$S) %2$S
 tabs.closeTab=Close Tab
 tabs.close=Close
 tabs.closeWarningTitle=Confirm close
