--- a/basilisk/locales/en-US/chrome/browser/preferences/content.dtd
+++ b/basilisk/locales/en-US/chrome/browser/preferences/content.dtd
@@ -42,6 +42,8 @@
 
 <!ENTITY  javascriptWasm.label           "Enable WebAssembly (WASM)">
 <!ENTITY  javascriptWasm.accesskey       "y">
+<!ENTITY  javascriptServiceWorkers.label      "Enable Service Workers">
+<!ENTITY  javascriptServiceWorkers.accesskey  "S">
 #ifdef MOZ_WEBRTC
 <!ENTITY  javascriptWebrtc.label           "Enable WebRTC">
 <!ENTITY  javascriptWebrtc.accesskey       "R">
