--- a/basilisk/locales/en-US/chrome/browser/preferences/advanced.dtd
+++ b/basilisk/locales/en-US/chrome/browser/preferences/advanced.dtd
@@ -12,6 +12,8 @@
 <!ENTITY useCursorNavigation.accesskey   "c">
 <!ENTITY searchStartTyping.label         "Search for text when I start typing">
 <!ENTITY searchStartTyping.accesskey     "x">
+<!ENTITY reduceMotion.label              "Prefer reduced visual motion">
+<!ENTITY reduceMotion.accesskey          "v">
 <!ENTITY blockAutoRefresh.label          "Warn me when websites try to redirect or reload the page">
 <!ENTITY blockAutoRefresh.accesskey      "b">
 <!ENTITY useOnScreenKeyboard.label       "Show a touch keyboard when necessary">
