Add internal user scripts GUI pref

--- a/basilisk/locales/en-US/chrome/browser/preferences/content.dtd
+++ b/basilisk/locales/en-US/chrome/browser/preferences/content.dtd
@@ -44,6 +44,8 @@
 <!ENTITY  javascriptWasm.accesskey       "y">
 <!ENTITY  javascriptServiceWorkers.label      "Enable Service Workers">
 <!ENTITY  javascriptServiceWorkers.accesskey  "S">
+<!ENTITY  javascriptInternalUserscripts.label      "Enable internal user scripts (polyfills)">
+<!ENTITY  javascriptInternalUserscripts.accesskey  "I">
 #ifdef MOZ_WEBRTC
 <!ENTITY  javascriptWebrtc.label           "Enable WebRTC">
 <!ENTITY  javascriptWebrtc.accesskey       "R">
